2006-12-15 [paul]	2.6.1cvs37

	* src/folderview.c
		add missing #include "log.h"

2006-12-15 [paul]	2.6.1cvs36

	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter.h
	* src/plugins/bogofilter/bogofilter_gtk.c
		Add an option to allow inserting an
		X-Claws-Bogosity header (on MH folders
		only). Patch by Colin

2006-12-14 [colin]	2.6.1cvs35

	* src/main.c
		"Yes" should be the default choice for
		migration configuration

2006-12-14 [paul]	2.6.1cvs34

	* src/prefs_summaries.c
	* manual/advanced.xml
		Unhide mark_as_read_delay

2006-12-14 [paul]	2.6.1cvs33

	* src/messageview.c
	* src/messageview.h
	* src/mimeview.c
	* src/mimeview.h
	* src/summaryview.c
	* src/textview.c
	* src/textview.h
		Fix printing of selection
		Fix printing of message parts
		Fix printing of images
	* src/gtk/gtksourceprintjob.c
		Fix page count when there are images

2006-12-14 [wwp]	2.6.1cvs32

	* src/mainwindow.c
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/quicksearch.c
		fix quicksearch 'magnify' button status when QS is closed
		using the Escape key, thanks to Colin.

2006-12-14 [wwp]	2.6.1cvs31

	* src/mainwindow.c
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/quicksearch.c
		fix quicksearch 'magnify' button status when QS is closed
		using the Escape key, thanks to Colin.

2006-12-13 [colin]	2.6.1cvs30

	* src/ldapquery.c
	* src/ldaputil.c
		Use the binary safe version of ldap_get_values,
		to make sure we manipulate null-terminated 
		strings. Maybe fixes bug 1075, 'claws mail 
		segfault when completing ldap adresses'
	* src/syldap.c ** REMOVED **
	* src/syldap.h ** REMOVED **
		Remove dead files

2006-12-13 [mones]	2.6.1cvs29

	* po/es.po
		Fixed piped strings, fixed click translation

2006-12-13 [paul]	2.6.1cvs28

	* src/main.c
		don't translate these strings

2006-12-13 [paul]	2.6.1cvs27

	* po/en_GB.po
		updated

2006-12-13 [colin]	2.6.1cvs26

	* src/main.c
	* src/main.h
		Add claws_is_starting()

2006-12-13 [mones]	2.6.1cvs25
